@@ -2,14 +2,15 @@
 Hash: SHA256
 
 DIST python-glanceclient-0.10.0.tar.gz 112205 SHA256 42ba47254eb9d547753486bb6d46aa4f90ff67127d83401fe2570f201c5e2501 SHA512 1a278238fb01e0fb20fc195db60fe56f6f846916ab93239825d9940cbf5dbfa674d409d92269dedf0860b58586754b9fc0d8aff6955e0dee9457d18462ff3fcb WHIRLPOOL ba72f61c0c1a3b93742e5350bdddf8b665651375ca1e563c7dc8d96796425e4198cb0265afa4a5cf5e6c0d892b1dec3bd45c06f01478da7f267457989d64510e
-EBUILD python-glanceclient-0.10.0-r1.ebuild 2254 SHA256 aa56a7ecdcc15a12e79b2473b433af7a1744237b87dccdb39806b930bc60182a SHA512 2e801a76393fc53c003dc98ebb12a4dc9d02f177b264c355bfe4919acbc170f7d7dfc628fd340511e1c78369d944da47f397efc7b6a5e48b9899fd9a9367139e WHIRLPOOL bf18c9d44cd59c5566593ef2dcee74f4c40adf784a00ea03ad173551c161a4e7fb2725d99a8782cb4185f6111e91b7d4ddf0236e922ceb9344639ece177356be
-EBUILD python-glanceclient-0.10.0.ebuild 1560 SHA256 c24de0dec5a477a308d062c94a360f89589595f955795b42c9da8e8c269ff74d SHA512 b69472ee7db80563e549d8213c21be00edd94d130d09e95f2a18c74e5179fcaebc4779e527853682f6562987af21e560dd1debcc3c45c4df06defc8c87c07082 WHIRLPOOL 832f2b27f37205d1cee541fb03073fa8d37b0e8eb6f0d741e871feb7899e33630149a03253af3ae847da77b31693cf372d855fa9140ecd58ca16323e274ae793
-MISC ChangeLog 1608 SHA256 fbbdcca99e64fe869917f7621f73b0738789fd8ccfcf9f21d14a652061256cce SHA512 bae861c2a4e54212662000da6edc6f14ab766c92bbca59e0b7e2d49268cf2b955e06576d20e4d0f066d8756b2c23eb3089ce489b3d6d404f7bb6ae0f6b892c52 WHIRLPOOL cdde5d9a18c74d424b04a47634a20d9f02c24652c93f77723c8c9c87111daf4804993bb36159a3584b027947992061f87254238b8576b1fa1582f4336b9c9cde
+DIST python-glanceclient-0.12.0.tar.gz 123279 SHA256 d7de76f8ccdd889c9c0cd7d035fc20247fcafb8405295bc6aa1505d5692b2fa3 SHA512 79508049e60185aa77336b5c9db71ab7ec547206581ec5e1101b511201186fe653362b433c129cb766dacd66ff0e64c1f01564e8e53e4c2fbc2eb3704663c275 WHIRLPOOL 270a31c11a6dc0a48680e8f391f28197087d2386c6aaa3763f5e8810b5e5adb0aa12da4782679a6be0e7c35d572c70214fe9fe1af6efa5bee6468253f4c1053d
+EBUILD python-glanceclient-0.10.0-r1.ebuild 2280 SHA256 922ffec278365d4cb53a0bd323ba5ba7f3f6b7f217a9a2044c1ede9226a7a6ab SHA512 742a37cd26031fb81087509ff36523e8cc24e22cb692451d4bb2399766499b4f75709691603087e8873a98b9e57ac6aef3838f9dc761b16fbac6de6467708ee2 WHIRLPOOL 9ae8425c4ac8db8c72dd7efbf402ac0a30c603911fd703a8a7f95a988d8a267aded8b284347b74394b69781989a3127aebc7068821364824c0727e3e79d930b6
+EBUILD python-glanceclient-0.12.0.ebuild 2207 SHA256 97ff9a2ea9db1ad41156aabb0bfe09e94a1562990f2eb70c7da87d5460c15b19 SHA512 c4f6c9e705a4422bf18e12952c0431963208a12f64b80f15a970e3fb9daacada281036e4b957e75aee50030799f2d81bf67ea7e1d903f9b9bfbd33b461ce0e87 WHIRLPOOL dab9189aac75a9dd63219d176f115bb3d109d77d6b809ed7ef64fc8e0a188a2d99e7651e14bdb42791b68c99bbce4b880f7e07225c1a201822d3961358e8452b
+MISC ChangeLog 1846 SHA256 b01830c55c491eff73d79bf061bdfda6b843d0e7c218ddd8bc608d77708b103e SHA512 9647309e89f308bbb2be37973ea09837d1505d2365d81eac58921ee6e18c5900f061823aeecf0f11c881ea38ce3007de4554f95041b88f6bb3b59354141f2b60 WHIRLPOOL 4508c23fba3fcfdabde1afa172bd46397ad28250134a1bc85ac2b106b8a01da92a3462a61e5d0bba4dfd4789e8058884e037e6645710e4dbd2da6dbef8811945
 MISC metadata.xml 374 SHA256 25f4c8b04b8d1227f48cac4ddf91c678130ce4987e620012fd66ae46b89d5d4d SHA512 dd9ae276a6ef8dd748b8b856ea179cf5b6cabed8f47e9f56a308f697cb549a59ff554b978caf6d6afd2639768559742d9168bbb29e2ae4738169210744d24471 WHIRLPOOL 8c844dfb17d7f8ffb9038b5cad4579c715d126773850b66b57677c2b7b445117f1603c652404368b151818547957fa278f1edb15993f7f16490cb4715e6d755e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlKXP0MACgkQso7CE7gHKw1xSwCghkjeXnvd37LiWjzXuyy0wM1c
-9dIAn3z2/ZGyGTrtroMsdg3XG1aSzuFo
-=Fw8K
+iEYEAREIAAYFAlKZtJgACgkQso7CE7gHKw2i0ACgk8ukQYlqJ+dqXJ7vbn8R98NL
+fJsAnAog6qpFB+UUcEntzV6mkw/lapz8
+=aPZz
 -----END PGP SIGNATURE-----
