@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-glanceclient/python-glanceclient-0.10.0-r1.ebuild,v 1.2 2013/11/30 09:48:57 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-glanceclient/python-glanceclient-0.12.0.ebuild,v 1.1 2013/11/30 09:48:57 idella4 Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -17,33 +17,31 @@ KEYWORDS="~amd64 ~x86"
 IUSE="doc test"
 
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
-		test? ( dev-python/mox[${PYTHON_USEDEP}]
-				dev-python/coverage[${PYTHON_USEDEP}]
+		test? ( >=dev-python/coverage-3.6[${PYTHON_USEDEP}]
 				>=dev-python/pep8-1.3.3[${PYTHON_USEDEP}]
-				>=dev-python/setuptools-git-0.4[${PYTHON_USEDEP}]
 				>=dev-python/sphinx-1.1.2[${PYTHON_USEDEP}]
-				>=dev-python/testrepository-0.0.13[${PYTHON_USEDEP}]
-				>=dev-python/testtools-0.9.22[${PYTHON_USEDEP}]
+				=dev-python/d2to1-0.2.10[${PYTHON_USEDEP}]
+				<dev-python/d2to1-0.3[${PYTHON_USEDEP}]
+				>=dev-python/testrepository-0.0.17[${PYTHON_USEDEP}]
+				>=dev-python/testtools-0.9.32[${PYTHON_USEDEP}]
 				=dev-python/pyflakes-0.7.2[${PYTHON_USEDEP}]
 				>=dev-python/flake8-2.0[${PYTHON_USEDEP}]
-				>=dev-python/hacking-0.5.3[${PYTHON_USEDEP}]
-				<dev-python/hacking-0.6[${PYTHON_USEDEP}]
-				dev-python/mox[${PYTHON_USEDEP}]
-				>=dev-python/mock-0.8.0[${PYTHON_USEDEP}]
+				>=dev-python/hacking-0.5.6[${PYTHON_USEDEP}]
+				<dev-python/hacking-0.7[${PYTHON_USEDEP}]
+				>=dev-python/mox-0.5.3[${PYTHON_USEDEP}]
+				>=dev-python/mock-0.8.03[${PYTHON_USEDEP}]
 			)
 		doc? ( >=dev-python/sphinx-1.1.2[${PYTHON_USEDEP}] )
 	"
 RDEPEND="virtual/python-argparse[${PYTHON_USEDEP}]
-		>=dev-python/d2to1-0.2.10[${PYTHON_USEDEP}]
-		<dev-python/d2to1-0.3[${PYTHON_USEDEP}]
-		>=dev-python/pbr-0.5[${PYTHON_USEDEP}]
-		<dev-python/pbr-0.6[${PYTHON_USEDEP}]
-		>=dev-python/python-keystoneclient-0.2.1[${PYTHON_USEDEP}]
+		>=dev-python/pbr-0.5.21[${PYTHON_USEDEP}]
+		<dev-python/pbr-1.0[${PYTHON_USEDEP}]
+		>=dev-python/python-keystoneclient-0.3.0[${PYTHON_USEDEP}]
 		<dev-python/python-keystoneclient-1[${PYTHON_USEDEP}]
 		>=dev-python/prettytable-0.6[${PYTHON_USEDEP}]
 		<dev-python/prettytable-0.8[${PYTHON_USEDEP}]
 		dev-python/pyopenssl[${PYTHON_USEDEP}]
-		>=dev-python/warlock-0.7.0[${PYTHON_USEDEP}]
+		>=dev-python/warlock-1.0.1[${PYTHON_USEDEP}]
 		<dev-python/warlock-2[${PYTHON_USEDEP}]"
 
 python_prepare_all() {
