@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/python-glanceclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-glanceclient/ChangeLog,v 1.7 2013/11/28 13:03:45 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-glanceclient/ChangeLog,v 1.8 2013/11/30 09:48:57 idella4 Exp $
+
+*python-glanceclient-0.12.0 (30 Nov 2013)
+
+  30 Nov 2013; Ian Delaney <idella4@gentoo.org>
+  +python-glanceclient-0.12.0.ebuild, -python-glanceclient-0.10.0.ebuild,
+  python-glanceclient-0.10.0-r1.ebuild:
+  bump; update deps, remove old
 
 *python-glanceclient-0.10.0-r1 (28 Nov 2013)
 
